changed paragraph rules
i made it so that paragraphs are now separated by two `\n`s instead of one. This is to allow text to be copied from the book, where line breaks are common because of the text's formatting. You might still have to add line breaks though...
I'll work on a system to check for indents for paragraphs.

Meanwhile, if anyone has a better idea of how to split sentences, I'd love to hear it, because the regex-based solution reorders the text for some reason. (Try to use only the standard library, just for easy porting or whatever.)

--- a/templates/index.html
+++ b/templates/index.html
@@ -86,7 +86,7 @@
 	<h1>AutoNote</h1>
 	<h2>Automatically take notes on pieces of text</h2>
 	<p>Enter the text that you want to take notes on below. </p>
-	<p><strong>IMPORTANT: Make sure that each paragraph of your text is on ONE LINE. Spaces after periods in a sentence are fine, but don't put spaces after periods anywhere else. </strong>
+	<p><strong>IMPORTANT: Separate each paragraph by a blank line. Spaces after periods in a sentence are fine, but don't put spaces after periods anywhere else. </strong>
     <p>Use <strong>>></strong> to create headings in your notes. For example, <strong>>>Section A</strong> will show as <h3>Section A</h3></p>
     <p>The program takes notes on important dates, numerical figures, and quotes. It also picks out the most relevant details from the text.</p>
     <form action='/notes', method='POST'>
